--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"server": "node src/server.js",
+		"server": "nodemon src/server/server.js",
 		"dev": "concurrently \"npm start\" \"npm run server\""
 	},
 	"eslintConfig": {
@@ -43,6 +43,8 @@
 		"concurrently": "^5.3.0",
 		"deep-freeze": "0.0.1",
 		"json-server": "^0.16.1",
+		"json-server-auth": "^2.0.2",
+		"nodemon": "^2.0.4",
 		"redux-devtools-extension": "^2.13.8"
 	}
 }
