--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"server": "nodemon src/server/server.js",
+		"server": "nodemon server/server.js",
 		"dev": "concurrently \"npm start\" \"npm run server\""
 	},
 	"eslintConfig": {
