More Readable Controller Error Checking, Seventh Iteration Goals Met, Code Cleanup

--- a/example.env
+++ b/example.env
@@ -1,5 +1,7 @@
 # Fill the fields and save with filename .env
-# The default backend address is set to http://localhost:3001/ in frontend httpService.
+# The default backend address is set to http://localhost:3001/ in frontend httpService. If the BACKEND_PORT is changed here, the port definition set there should be changed as well.
+# BACKEND_SECRET is used to encrypt tokens.
+# BACKEND_PASSWORD is used to identify the default admin@localhost.com administrator account.
 
 BACKEND_PORT=3001
 BACKEND_SECRET=
