Automatically Serve Deployed Frontend, Backend URL in Constants

--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
+# These environment variables are required for the express backend.
 # Fill the fields and save with filename .env
-# The default backend address is set to http://localhost:3001/ in frontend httpService. If the BACKEND_PORT is changed here, the port definition set there should be changed as well.
+# BACKEND_PORT is the port the express backend will listen to.
 # BACKEND_SECRET is used to encrypt tokens.
 # BACKEND_PASSWORD is used to identify the default admin@localhost.com administrator account.
 
