--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"mysql": "^2.18.1",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-redux": "^7.2.1",
+		"react": "^16.14.0",
+		"react-dom": "^16.14.0",
+		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.3",
+		"react-scripts": "^4.0.0",
 		"redux": "^4.0.5",
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^1.3.1"
@@ -47,8 +47,7 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"concurrently": "^5.3.0",
-		"deep-freeze": "0.0.1",
-		"nodemon": "^2.0.4",
+		"nodemon": "^2.0.6",
 		"redux-devtools-extension": "^2.13.8"
 	}
 }
