--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "^4.0.0",
+		"react-vis": "^1.11.7",
 		"redux": "^4.0.5",
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^1.3.1"
