--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"bcrypt": "^5.0.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.5",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"mysql": "^2.18.1",
@@ -18,6 +20,7 @@
 		"react-scripts": "^4.0.0",
 		"react-vis": "^1.11.7",
 		"redux": "^4.0.5",
+		"redux-mock-store": "^1.5.4",
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^1.3.1"
 	},
