--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"redux": "^4.0.5",
 		"redux-mock-store": "^1.5.4",
 		"semantic-ui-css": "^2.4.1",
-		"semantic-ui-react": "^1.3.1"
+		"semantic-ui-react": "^1.3.1",
+		"sqlstring": "^2.3.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
