--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"enzyme-adapter-react-16": "^1.15.5",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
-		"mysql": "^2.18.1",
+		"mysql2": "^2.2.5",
 		"react": "^16.14.0",
 		"react-dom": "^16.14.0",
 		"react-redux": "^7.2.2",
@@ -23,7 +23,7 @@
 		"redux-mock-store": "^1.5.4",
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^1.3.1",
-		"sqlstring": "^2.3.2"
+		"sequelize": "^6.3.5"
 	},
 	"scripts": {
 		"start": "react-scripts start",
