Auto-redirect to Front Page on Login

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"server": "nodemon server/server.js",
+		"server": "nodemon --unhandled-rejections=strict server/server.js",
 		"dev": "concurrently \"npm start\" \"npm run server\""
 	},
 	"eslintConfig": {
