--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"enzyme-adapter-react-16": "^1.15.5",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"multer": "^1.4.2",
 		"mysql2": "^2.2.5",
 		"react": "^16.14.0",
 		"react-dom": "^16.14.0",
