--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
 		"@testing-library/user-event": "^7.2.1",
 		"axios": ">=0.21.1",
 		"bcrypt": "^5.0.0",
+		"chai": "^4.2.0",
+		"chai-http": "^4.3.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.5",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"mocha": "^8.2.1",
 		"multer": "^1.4.2",
 		"mysql2": "^2.2.5",
 		"react": "^16.14.0",
@@ -32,7 +35,8 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"server": "nodemon --unhandled-rejections=strict server/server.js",
-		"dev": "concurrently \"npm start\" \"npm run server\""
+		"dev": "concurrently \"npm start\" \"npm run server\"",
+		"mocha": "mocha server/tests/*.mocha.js"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
