--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"bcrypt": "^5.0.0",
 		"chai": "^4.2.0",
 		"chai-http": "^4.3.0",
+		"chai-match": "^1.1.1",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"enzyme": "^3.11.0",
