--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"chai": "^4.2.0",
 		"chai-http": "^4.3.0",
 		"chai-match": "^1.1.1",
+		"concurrently": "^5.3.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"enzyme": "^3.11.0",
@@ -18,6 +19,9 @@
 		"mocha": "^8.2.1",
 		"multer": "^1.4.2",
 		"mysql2": "^2.2.5",
+		"nodemon": "^2.0.7",
+		"pg": "^8.5.1",
+		"pg-hstore": "^2.3.3",
 		"react": "^16.14.0",
 		"react-dom": "^16.14.0",
 		"react-redux": "^7.2.2",
@@ -25,6 +29,7 @@
 		"react-scripts": "^4.0.1",
 		"react-vis": "^1.11.7",
 		"redux": "^4.0.5",
+		"redux-devtools-extension": "^2.13.8",
 		"redux-mock-store": "^1.5.4",
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^1.3.1",
