Market Tracker Weather Bias, Continue Work on Docs

--- a/example.env
+++ b/example.env
@@ -3,6 +3,7 @@
 # BACKEND_PORT is the port the express backend will listen to.
 # BACKEND_SECRET is used to encrypt tokens.
 # BACKEND_PASSWORD is used to identify the default admin@localhost.com administrator account.
+# MARKET_API is used to bias market data with Open Weather Map API temperature of a chosen location. If left blank, no bias is used.
 
 BACKEND_PORT=3001
 BACKEND_SECRET=
@@ -14,3 +15,4 @@ SQL_PORT=
 SQL_DATABASE=
 SQL_DIALECT=
 NODE_PATH=src/
+MARKET_API=
